<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    tools:context=".ui.neighbour_list.DetailNeighbourActivity">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/activity_detail_neighbour_avatar_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop" />


        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/transparent"
            android:tint="@color/white"
            app:borderWidth="0dp"
            android:elevation="0dp"
            app:elevation="0dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_baseline_arrow_back_24"
            />

        <TextView
            android:id="@+id/activity_detail_neighbour_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        *
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fav_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_baseline_star__yellow_24"
             />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".60"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:scaleType="centerCrop"
            android:layout_margin="20dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintBottom_toTopOf="@id/aboutme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".40"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/locationLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent=".100"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/detail_Card_Name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:text="Nom"
                    android:textColor="@android:color/black"
                    android:textSize="21sp" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/locationLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintBottom_toTopOf="@id/telLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent=".25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameLayout">

                <ImageView
                    android:id="@+id/detail_home_card_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/detail_home_card_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_baseline_location_on_24" />

                <TextView
                    android:id="@+id/detail_home_card_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/detail_home_card_img"
                    app:layout_constraintTop_toTopOf="parent" />


            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/telLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintBottom_toTopOf="@id/fbLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent=".25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/locationLayout">

                <ImageView
                    android:id="@+id/detail_tel_card_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/detail_tel_card_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_baseline_phone_24" />

                <TextView
                    android:id="@+id/detail_tel_card_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/detail_tel_card_img"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/fbLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent=".25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/telLayout">

                <ImageView
                    android:id="@+id/detail_site_card_img"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/detail_site_card_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_baseline_language_24" />

                <TextView
                    android:id="@+id/detail_site_card_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/detail_site_card_img"
                    app:layout_constraintTop_toTopOf="parent" />


            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/aboutme"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".40"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details">

            <TextView
                android:id="@+id/detail_about_me"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>